@@ -1,15 +1,25 @@
 #!/bin/sh
 
-# This script executes some teragens with Hadoop 2.0.  It is
-# convenient for putting data into your file system for some tests.
+# This script executes some teragens.  It is convenient for putting
+# data into your file system for some tests.
 
 cd ${HADOOP_BUILD_HOME}
 
-command="bin/hadoop jar share/hadoop/mapreduce/hadoop-mapreduce-examples-$HADOOP_VERSION.jar teragen 50000000 teragen-1"
+if [ "${HADOOP_SETUP_TYPE}" == "MR1" ]
+then
+    terasortexamples="hadoop-examples-$HADOOP_VERSION.jar"
+    rmoption="-rmr"
+elif [ "${HADOOP_SETUP_TYPE}" == "MR2" ]
+then
+    terasortexamples="share/hadoop/mapreduce/hadoop-mapreduce-examples-$HADOOP_VERSION.jar"
+    rmoption="-rm -r"
+fi
+
+command="bin/hadoop jar ${terasortexamples} teragen 50000000 teragen-1"
 echo "Running $command" >&2
 $command
 
-command="bin/hadoop jar share/hadoop/mapreduce/hadoop-mapreduce-examples-$HADOOP_VERSION.jar teragen 50000000 teragen-2"
+command="bin/hadoop jar ${terasortexamples} teragen 50000000 teragen-2"
 echo "Running $command" >&2
 $command
    
