@@ -4,6 +4,7 @@ Make default HDFS over Lustre replication 3
 Document trade offs of replication.
 Increase HDFS bandwidthPerSec.
 Fix hadoop-hdfs-over-lustre-nodes-decomission-script.sh path bug.
+Fix hadoop-create-files-script.sh to work w/ Hadoop 1.0 & 2.0.
 
 magpie 1.3
 ----------
